add ai get status
